Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Adding a default render method for compound widgets, displaying the rendered
  structure for each widget in the compound widget: providing a render method
  when defining a compound widget is not mandatory anymore.
Bug fixes:
~~~~~~~~~~
- Generic Select Widget: when widget is required and other option is accepted,
  an empty entry in the text input was accepted when validating the widget.
- Don't fail widget expression computation if the proxy does not have
  a review_state.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-