@@ -6,6 +6,7 @@ New features:
 - Adding a default render method for compound widgets, displaying the rendered
   structure for each widget in the compound widget: providing a render method
   when defining a compound widget is not mandatory anymore.
+- Added the new "context" variable to be used with the storage expressions.
 Bug fixes:
 ~~~~~~~~~~
 - Generic Select Widget: when widget is required and other option is accepted,
